# hpc-campaign

./: .dockerignore‎  .flake8  README.md  mypi.ini  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml  build-test.yml
data/: example_campaign_api.py  example_campaign_cli.sh  onearray.h5  readme
data/schema_examples/: code_append_grid_append.yaml  code_append_grid_multifile.yaml  code_multifile.yaml  code_single_append.yaml  code_static_grid_append.yaml  code_static_grid_multifile.yaml  code_xgc.yaml
dockerfiles/: Dockerfile
docs/source/: conf.py  index.rst  installation.rst  introduction.rst  usage.rst  usage_api.rst  usage_cli.rst
examples/mhd_orszag_tang/: CMakeLists.txt  README.md
examples/mhd_orszag_tang/ensembles/: simple.json
examples/mhd_orszag_tang/scripts/: add_adios_files_to_campaign.py  adios_derived_variables.py  adios_stats.py  render_adios_visualizations_to_campaign.py  run_ensembles.py
examples/mhd_orszag_tang/src/: adios_writer.cpp  adios_writer.hpp  main.cpp  mhd2d.cpp  mhd2d.hpp
hpc_campaign/: __init__.py  __main__.py  cache.py  config.py  connector.py  genkey.py  hdf5_metadata.py  hpc_campaign_cache.py  hpc_campaign_connector.py  hpc_campaign_genkey.py  hpc_campaign_list.py  hpc_campaign_manager.py  hpc_campaign_manager_args.py  index.py  info.py  key.py  list.py  ls.py  manager.py  manager_args.py  manager_funcs.py  rm.py  schema.py  taridx.py  types.py  upgrade.py  utils.py
source/: README.md  __init__.py  hpc_campaign_cache.py  hpc_campaign_config.py  hpc_campaign_connector.py  hpc_campaign_genkey.py  hpc_campaign_hdf5_metadata.py  hpc_campaign_key.py  hpc_campaign_list.py  hpc_campaign_manager.py  hpc_campaign_manager_args.py  hpc_campaign_utils.py
source/hpc_campaign_manager/: hpc_campaign_manager.py
tests/: test_adios_image_ingest.py  test_connector_jump_identity.py  test_manager.py  test_schema.py  test_schema_validation.py  test_simple.py  test_visualization_sequence.py
tests/heat2d/: heatPlot.py  heatSimulation.py
tools/: print_campaign_entries.py
