[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml] >= 7",
    "wheel >= 0.29.0",
]

[project]
name = "hpc-campaign"
version = "0.6.0"
description = "Campaign management scripts for remote data access"
readme = "README.md"
authors = [
    {name = "Norbert Podhorszki", email = "pnorbert@ornl.gov"}
]

license = "Apache-2.0"
license-files = ["LICENSE"]

keywords = ["campaign", "remote data", "adios2", "hdf5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    #"License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization"
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML >= 6",
    "paramiko >= 3.5",
    "PyNaCl >= 1.5",
    "redis >= 5",
    "h5py >= 3.10",
    "pillow >= 11"
]

[project.urls]
Source = "https://github.com/ornladios/hpc-campaign"
Tracker = "https://github.com/ornladios/hpc-campaign/issues"
Documentation = "https://hpc-campaign.readthedocs.io/en/latest/"

[tool.setuptools]
packages = ["hpc_campaign"]

#[tool.setuptools.package-dir]
#hpc_campaign = "hpc_campaign"

[tool.setuptools.dynamic]
version = { attr = "hpc_campaign.__version__" }

[project.scripts]
hpc_campaign="hpc_campaign.__main__:main"

[tool.pyright]
include = ["hpc_campaign"]
exclude = ["**/__pycache__"]
reportPossiblyUnboundVariable = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Enable error, flake8, warning, and isort rules
ignore = ["E712", "E203", "E302", "F401", "F403", "F405"]
extend-select = ["B"] # Extend with Bugbear rules

exclude = [
    "docs/",
    "build/",
    "dist/",
    "dockerfiles/",
    "hpc_campaign.egg-info/",
]

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "types-paramiko (>=4.0.0.20250822,<5.0.0.0)",
    "types-python-dateutil (>=2.9.0.20251115,<3.0.0.0)",
]

[tool.poetry]
packages = [
    { include = "*", from = "hpc_campaign" },
]

[[tool.mypy.overrides]]
module = "h5py"
ignore_missing_imports = true

[tool.pylint]
[tool.pylint.format]
max-line-length = 120
